tests/files/type_checker_tests/should_fail/189.cmdr
//Should fail if scan expression does not have string
x = scan 3;
